--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,12 +7,12 @@ dependencies = [
     "fastapi==0.104.1",
     "uvicorn[standard]==0.24.0",
     "python-multipart==0.0.6",
-    "opencv-python==4.8.1.78",
+    "opencv-python>=4.9.0",
     "google-genai>=1.0.0",
     "pydantic==2.5.0",
     "python-dotenv==1.0.0",
     "aiofiles==23.2.1",
-    "numpy==1.24.3",
+    "numpy>=1.26.0,<2.0.0",
     "pillow==10.1.0",
     "rich==13.7.0",
 ]
