Refactor authentication setup for Gemini API, adding support for service account keys and API key options. Update README and environment configuration. Enhance error handling and logging in gemini_analyzer.py. Add test script for Google Cloud service account key validation.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,12 @@
-# Gemini API Configuration
-GEMINI_API_KEY=your_gemini_api_key_here
+# Authentication Method (vertex_ai or api_key, default: vertex_ai)
+# vertex_ai: Uses service account key from backend/google-cloud-key/
+# api_key: Uses GEMINI_API_KEY environment variable
+AUTH_METHOD=vertex_ai
+
+# Model Configuration (optional, defaults to gemini-2.5-flash)
+# Options: gemini-2.5-flash, gemini-1.5-pro, gemini-1.5-flash, gemini-2.0-flash-exp
+MODEL_NAME=gemini-2.5-flash
+
+# API Key (only required if AUTH_METHOD=api_key)
+# GEMINI_API_KEY=your_gemini_api_key_here
 
