feat: Add multimodal analysis support and OpenRouter integration
- Updated API to include 'analysis_mode' in AnalysisConfig for frame and multimodal options.
- Implemented OpenRouter multimodal video analyzer with structured output validation.
- Created test scripts to validate OpenRouter API functionality with various input formats (text, base64 image, video).
- Added comprehensive documentation for the architecture, developer workflows, and testing procedures.
- Introduced error handling for API quota and service availability in OpenRouter integration.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ google-cloud-key/
 google-cloud-key\gen-lang-client-0098002153-c6183e77db1e.json
 .copilot-ignore
 .claudeignore
+.claude
 
 # Python
 __pycache__/
