--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,17 @@ MODEL_NAME=gemini-2.5-flash
 # API Key (only required if AUTH_METHOD=api_key)
 # GEMINI_API_KEY=your_gemini_api_key_here
 
+# OpenRouter Configuration (for multimodal video analysis)
+# Get your API key from: https://openrouter.ai/keys
+OPENROUTER_MODEL=google/gemini-3-pro-preview
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# Note: Multimodal mode has a 50MB file size limit (vs 100MB for frame-based)
+#
+# Model Support for Structured Outputs:
+# - google/gemini-3-pro-preview: NO (uses Google AI Studio, doesn't support response_format)
+# - openai/gpt-4o: YES (full structured output support)
+# - anthropic/claude-sonnet-4.5: YES (full structured output support)
+# - Most open-source models: YES (check https://openrouter.ai/models?supported_parameters=structured_outputs)
+#
+# If the model doesn't support structured outputs, the system will fall back to prompt-based JSON enforcement
